<resources>

    <!-- General String's definition -->
    <string name="gen_app_name">PayBird</string>
    <string name="gen_drawer_open">Drawer abierto</string>
    <string name="gen_drawer_close">Drawer cerrado</string>
    <string name="gen_dialog_ok_button">Entendido</string>
    <string name="gen_dialog_confirm_button">Confirmar</string>
    <string name="gen_dialog_cancel_button">Cancelar</string>
    <string name="gen_logout">Cerrar Sesión</string>
    <string name="gen_logout_confirm">Va a cerrar la sesión</string>
    <string name="gen_error_mandatory">Obligatorio</string>
    <string name="gen_error_title">PayBird ¡ERROR!</string>
    <string name="gen_welcome">Bienvenido</string>
    <string name="gen_menu_title">Menú</string>
    <string name="gen_menu_route">Ruta</string>
    <string name="gen_menu_more">Más</string>
    <string name="gen_sesion_expired">La sesión ha expirado</string>
    <string name="gen_printer_notfound">No hay conexión a Impresora</string>
    <string name="gen_printer_found">¡Conectado a Impresora!</string>
    <string name="gen_printer_disconnected_prompt">Impresora desconectada</string>
    <string name="gen_printer_connecting_prompt">Conectando impresora&#8230;</string>
    <string name="gen_printer_connected_prompt">Impresora conectada</string>
    <string name="gen_clean_action">Limpiar</string>
    <string name="gen_cleaning_action">Limpiando formulario</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Clave</string>
    <string name="login_dologin">Iniciar sesión</string>
    <string name="login_confirmGoSettings">Accederá al apartado de ajustes. ¿Desea continuar?</string>
    <string name="settings_title">Ajustes</string>
    <string name="settings_network_title">Ajustes de conexión</string>
    <string name="settings_bluetoothprinter_title">Ajustes de impresora Bluetooth</string>
    <string name="settings_network_ip">IP</string>
    <string name="settings_network_port">Puerto</string>
    <string name="settings_save">Guardar</string>
    <string name="settings_action_success">Se ha guardado los cambios</string>
    <string name="settings_action_failure">No se pudo guardar los cambios</string>
    <string name="settings_bluetoothprinter_link">Vincular</string>
    <string name="settings_bluetoothprinter_name">Nombre</string>
    <string name="settings_bluetoothprinter_mac">MAC</string>
    <string name="customers_menu_title">Clientes</string>
    <string name="customers_menu_subtitle_create">Nuevo cliente</string>
    <string name="customers_menu_subtitle_edit">Editar cliente</string>
    <string name="customers_document">Documento</string>
    <string name="customers_documenttype">Tipo de documento</string>
    <string name="customers_name">Nombre</string>
    <string name="customers_lastname">Apellido</string>
    <string name="customers_address">Dirección</string>
    <string name="customers_neighborhood">Barrio</string>
    <string name="customers_city">Ciudad</string>
    <string name="customers_phone">Teléfono residencia</string>
    <string name="customers_mobile">Celular</string>
    <string name="customers_route">Ruta</string>
    <string name="customers_dosave">Guardar</string>
    <string name="customers_info_title">Información personal</string>
    <string name="customers_companyinfo_title">Información laboral</string>
    <string name="customers_company_name">Nombre de empresa</string>
    <string name="customers_company_address">Dirección de empresa</string>
    <string name="customers_company_city">Ciudad</string>
    <string name="customers_company_phone">Teléfono</string>
    <string name="customers_listcustomers_action">Listar clientes</string>
    <string name="customersdialog_nodatafound">No se han encontrado Clientes</string>
    <string name="todaypayments_menu_title">Abonos por fecha</string>
    <string name="todaypayments_menu_title_pending">Pendientes</string>
    <string name="todaypayments_menu_title_done">Realizados</string>
    <string name="todaypayments_pending_nodatafound">No hay abonos pendientes</string>
    <string name="todaypayments_done_nodatafound">No hay abonos realizados</string>
    <string name="todaypayments_dopay_value">Valor a abonar</string>
    <string name="todaypayments_dopay_nextpayment">Selecciona la fecha del próximo pago</string>
    <string name="todaypayments_dopay_title">Abonar a crédito # %d</string>
    <string name="todaypayments_dopay_error1">El valor a abonar debe ser mayor a $0</string>
    <string name="todaypayments_dopay_error2">El valor a abonar no puede exceder el saldo</string>
    <string name="todaypayments_creditvalue_label">Valor crédito</string>
    <string name="todaypayments_remainder_label">Saldo</string>
    <string name="todaypayments_paymentvalue_label">Valor cuota</string>
    <string name="todaypayments_installmenttracker_label">Va en cuota</string>
    <string name="todaypayments_choosedate">Seleccionar fecha</string>
    <string name="pendingcredits_menu_title">Créditos pendientes</string>
    <string name="pendingcredits_filtes">Filtros</string>
    <string name="pendingcredits_nodatafound">No se encontraron créditos</string>
    <string name="payments_gotonull">Anular abono</string>
    <string name="payments_confirm_nullmovement">Va a anular el movimiento # %d por valor de $ %s</string>
    <string name="payments_gotodo">Abonar</string>
    <string name="filterdialog_dofilter">Filtrar</string>
    <string name="filterdialog_donotfilter">Cancelar</string>
    <string name="filterdialog_dofilterby">Filtrar por:</string>
    <string name="filterdialog_filterby_creditcode">Código de crédito</string>
    <string name="filterdialog_filterby_customername">Nombre de cliente</string>
    <string name="routeorder_menu_title">Orden de ruta</string>
    <string name="routeorder_menu_subtitle">Clientes en %s</string>
    <string name="routeorder_nodatafound">No se encontraron resultados</string>
    <string name="credits_menu_title">Administración de Créditos</string>
    <string name="credits_menu_title2">Créditos</string>
    <string name="credits_menu_subtitle">Administración</string>
    <string name="creditmanagement_customer_title">Información del cliente</string>
    <string name="creditmanagement_select_customer">Seleccione un cliente</string>
    <string name="creditmanagement_credits_title">Información de créditos</string>
    <string name="creditmanagement_no_customer_selected">Selecciona un cliente para visualizar sus créditos asociados</string>
    <string name="creditmanagement_no_credits_found">No hay créditos asociados</string>
    <string name="creditinfo_interest">Intereses</string>
    <string name="creditinfo_period">Periodo</string>
    <string name="creditinfo_lastpayment">Ultimo pago</string>
    <string name="creditinfo_finished">Finalizado</string>
    <string name="creditmovements_title">Movimientos - Crédito # %d</string>
    <string name="creditmovements_nodatafound">No se han encontrado movimientos</string>
    <string name="createcredit_title">Crear crédito</string>
    <string name="createcredit_installmentsummary_title">Información de cuotas</string>
    <string name="createcredit_installments_quantity">Cantidad</string>
    <string name="createcredit_installments_value">Valor</string>
    <string name="createcredit_creditdate">Creado el</string>
    <string name="createcredit_duedate">Vence el</string>
    <string name="createcredit_duration">Duración</string>
    <string name="createcredit_duration_value">%d días</string>
    <string name="createcredit_value">Valor</string>
    <string name="createcredit_interest">Interés</string>
    <string name="createcredit_remainder">Saldo</string>
    <string name="createcredit_nextpayment">Próximo pago</string>
    <string name="createcredit_confirm">Confirmar crédito</string>
    <string name="createcredit_wrongquantity">Duración inválida</string>
    <string name="confirmcredit_customer">Cliente</string>
    <string name="confirmcredit_summary">Resumen de crédito</string>
    <string name="confirmcredit_quantityinstallment">%d cuotas de %s</string>
    <string name="confirmcredit_prompt">¿Desea crear este crédito?</string>
    <string name="confirmcredit_pickorder">Ordenar crédito después de</string>
    <string name="confirmcredit_donetoprint">¿Imprimir recibo?</string>
    <string name="tag_customer">tag_customer</string>
    <string name="tag_payment">tag_payment</string>

</resources>
