<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cristiancollazos.paybird.view.fragment.SettingsFragment">

    <TextView
        android:id="@+id/tvSettingsTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/minimal_padding"
        android:layout_marginRight="@dimen/minimal_padding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawablePadding="@dimen/minimal_padding"
        android:drawableStart="@drawable/ic_settings_white_24dp"
        android:text="@string/settings_title"
        android:textColor="@color/indigoblue_icons" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvSettingsTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cvSettings_ConnectionDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/minimal_padding"
                app:cardCornerRadius="@dimen/cardview_corner_radio"
                app:elevation="@dimen/cardview_elevation_high">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/indigoblue_accent">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/minimal_padding"
                            android:drawableStart="@drawable/ic_import_export_white_24dp"
                            android:gravity="center_vertical"
                            android:padding="@dimen/cardview_actions_padding"
                            android:text="@string/settings_network_title"
                            android:textAlignment="gravity"
                            android:textColor="@color/indigoblue_icons" />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/activity_horizontal_margin">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/minimal_padding"
                            android:layout_weight="0.7">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etSettingsIp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789."
                                android:hint="@string/settings_network_ip"
                                android:inputType="number"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/minimal_padding"
                            android:layout_weight="0.3">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/etSettingsPort"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789"
                                android:hint="@string/settings_network_port"
                                android:inputType="number"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvSettings_PrinterDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvSettings_ConnectionDiv"
                android:layout_margin="@dimen/minimal_padding"
                app:cardCornerRadius="@dimen/cardview_corner_radio"
                app:elevation="@dimen/cardview_elevation_high">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/indigoblue_accent">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/minimal_padding"
                            android:drawableStart="@drawable/ic_print_white_24dp"
                            android:gravity="center_vertical"
                            android:padding="@dimen/cardview_actions_padding"
                            android:text="@string/settings_bluetoothprinter_title"
                            android:textAlignment="gravity"
                            android:textColor="@color/indigoblue_icons" />

                    </FrameLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin">

                        <Button
                            android:id="@+id/btnSettingsPrinter_getAvailablePrinters"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_bluetoothprinter_link" />

                        <TextView
                            android:id="@+id/tvSettingsPrinter_NameTitle"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/btnSettingsPrinter_getAvailablePrinters"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_toEndOf="@+id/btnSettingsPrinter_getAvailablePrinters"
                            android:text="@string/settings_bluetoothprinter_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSettingsPrinter_MacTitle"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/btnSettingsPrinter_getAvailablePrinters"
                            android:layout_alignEnd="@+id/tvSettingsPrinter_NameTitle"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_toEndOf="@+id/btnSettingsPrinter_getAvailablePrinters"
                            android:text="@string/settings_bluetoothprinter_mac"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSettingsPrinter_Name"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/minimal_padding"
                            android:layout_toEndOf="@id/tvSettingsPrinter_NameTitle"
                            android:text="SIN DEFINIR"
                            android:textColor="@color/indigoblue_primary_text" />

                        <TextView
                            android:id="@+id/tvSettingsPrinter_Mac"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/btnSettingsPrinter_getAvailablePrinters"
                            android:layout_marginStart="@dimen/minimal_padding"
                            android:layout_toEndOf="@id/tvSettingsPrinter_MacTitle"
                            android:text="SIN DEFINIR"
                            android:textColor="@color/indigoblue_primary_text" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSettingsNetworkSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_save_white_24dp"
        android:text="@string/settings_save" />

</RelativeLayout>
